# playdate-game-template

./: .gitignore  .gitmodules  .luarc.json  CMakeLists.txt  Rakefile
Source/: main.lua  pdxinfo
lualib/: sub.lua
rakes/: res.rake
src/: main.c
